horgand ChangeLog




== v1.14 (  /  /2007) ==
-------------------------------------------------------------------------------------------
- Fix bug on Delay time.
- Added wave type for LFO effects.
- Fix small bug initializing vars. 
- small changes on GUI, and ADSR range values. 
- Added 5 New waveforms.
- Bug Fixed, reading sounds in More Sounds menu bank manager. 
- Added New Bank, bank file to init state for work with a empty banks.
- Suggest preset name at Save File.
- Back to Alsa if JACK was not started.
- Optimized code, less CPU usage    





== v1.12 (17/09/2007) ==
--------------------------------------------------------------------------------------------
- Posibility to run without GUI.
- Added Keyboard Velocity Scaling.
- Fixed bug in Name display.
- Added 3 waveforms more.
- Added syncro speed to all the LFO effects.
- Support for old file formats >=1.11.
- Code optimized. 
- Added Click.
- Added the posibility to load sounds from other banks
  to manage/mix banks.
- sustain pedal now sustain '0' sustain sounds.
- Adjust initial state settings. 
- Normalize Volumes.
- Adjust Rotary LFO Amplitude.
- Added file browser to select wav rhythm files. 
- Fix widget positions.
- Remember last saved Bank.
- Fixed bug in command line.
- Fixed bug initiating ryhthms.
- Default buffer 128 again.
- Fixed jack crash for non-statig libxpm hints.




== v1.11 (30/08/2007) ==
--------------------------------------------------------------------------------------------
- Added FLTK options on command line.
- Added window icon. 
- Normalize volumes.
- Removed Keyboard Level Scaling.
- Prevent to load old format files.
- Fixed Preset at first time bug.
- Fixed Master Volume bug.
- Added organ transpose.
- Adjust linear interpolation in chorus effect. 
- Drawbars in stereo mode for better sound.
- Preset adjust.
- Bank/Sound format file changed.
- Synth engine parameters can be edited and stored for each preset.
- More tremolo power.





== v1.10 (20/08/2007) ==